# scuff-em

./: Makefile.am  autogen.sh  configure.ac
examples/StriplineCapacitor/: StriplineCapacitorFull.geo
mymodel/cube/: Cube.geo  Cube.msh  README  args_geo  args_mesh  bgm.py  clean.sh  cube.pft  cube_geo.pp  cube_geo.scuffgeo  cube_geo_MeshIndicator.hdf5  debug_args  run.sh  sphere.pft
src/applications/: Makefile.am
src/applications/generate-bgmesh/: Makefile.am  generate-bgmesh.cc
src/applications/scuff-scatter-adapt/: BGMService.cc  Makefile.am  Makefile.manual  OutputModules.cc  bgm.py  kdtree-test.c  kdtree.h  scuff-scatter-adapt.cc  scuff-scatter-adapt.h
src/libs/libhrutil/: libhrutil.cc
src/libs/libscuff/: RWGGeometry.cc  RWGSurface.cc  libscuff.h
